Fixed some style issues on mobiles

--- a/peliculas-app/src/styles.css
+++ b/peliculas-app/src/styles.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  height: auto;
+  height: 100%;
   overflow-x: hidden;
 }
 
